# BUT-FIT-MIT-Projects

./: mit_readme.xlsx  readme.md
1_Semester/SUI/1_Prohledávání/: explanation.md
1_Semester/SUI/2_Základy strojového učení/: xkucht11.py
1_Semester/SUI/3_Neuronové sítě/: xkucht11.py
1_Semester/UPA/2_příprava dat a jejich popisná charakteristika/: druhy_dataset.csv  proj2.ipynb  prvni_dataset.csv
1_Semester/UPA/3_extrakce dat z webu/: Readme.md  build.sh  data.tsv  item.py  items_urls.py  run.sh  urls.txt
2_Semester/EVO/: readme.txt
2_Semester/EVO/src/: main.py  requirements.txt
2_Semester/KNN/: obhajoba.pptx
3_Semester/AVS/1_Vektorizace/: BatchMandelCalculator.cc  BatchMandelCalculator.h  LineMandelCalculator.cc  LineMandelCalculator.h  MB-xkucht11.txt
3_Semester/AVS/2_Paralelizace pomocí OpenMP/: 3_4.txt  4_1.txt  4_2.txt  4_3.txt  PMC-xkucht11.txt
3_Semester/BAYa/: xkucht11_BAYa_Assignment2024_LDA.ipynb
3_Semester/MSP/proj_1/: proj1.ipynb
3_Semester/PCG/1_CUDA/: nbody.md
3_Semester/PCG/2_OpenACC/: nbody.md
4_Semester/FLP/1_Rozhodovací stromy/: DataParser.hs  Makefile  TEST_OUTPUT_2  Tree.hs  VERSION  flp-fun.hs
4_Semester/FLP/2_Rubikova kostka/: Makefile  README.md  flp24-log.pl
4_Semester/PRL/proj_1/: oets.cpp
4_Semester/PRL/proj_2/: test.sh  vuv.cpp
4_Semester/SUR/: audio.py  audio_models.py  data_augmentation.py  face_detection.py  requirements.txt
5_Semester/PGR/cviceni/2/: CMakeLists.txt
5_Semester/PGR/cviceni/2/src/: main.cpp
5_Semester/PGR/cviceni/3/: CMakeLists.txt  main.cpp
6_Semester/: links.txt
(+157 files in other folders)
